--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "bootstrap": "4.4.1",
+    "bootstrap-icons": "^1.7.0",
     "gulp-uglify-es": "^2.0.0",
     "jquery": "3.5.1",
     "lg-autoplay": "^1.2.1",
